added test data inference to titanic for kaggle submission

--- a/tabular/titanic.ipynb
+++ b/tabular/titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 13,
    "id": "4ee502bb-70ed-485a-ad77-e32088835efe",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "import numpy as np\n",
     "\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report, accuracy_score, roc_auc_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 16,
    "id": "67770c2c-deec-4d16-873b-8f16eecc4ba1",
    "metadata": {},
    "outputs": [
@@ -165,7 +166,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 194,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 17,
    "id": "cfc9487b-1e38-4f7f-ae94-8cc4aa1c3bff",
    "metadata": {},
    "outputs": [
@@ -233,7 +234,7 @@
       " 'C45' 'E8' 'B101' 'D45' 'C46' 'D30' 'E121' 'D11' 'E77' 'F38' 'B3' 'D6'\n",
       " 'B82 B84' 'D17' 'A36' 'B102' 'B69' 'E49' 'C47' 'D28' 'E17' 'A24' 'C50'\n",
       " 'B42' 'C148']\n",
-      "High level types: {'G', 'E', 'D', 'C', 'B', None, 'F', 'A', 'T'}\n"
+      "High level types: {'C', 'E', 'T', 'A', None, 'B', 'D', 'G', 'F'}\n"
      ]
     }
    ],
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 18,
    "id": "46aea089-032f-44ff-a813-d6aa65d051e1",
    "metadata": {},
    "outputs": [
@@ -261,14 +262,13 @@
     "print(f\"Age column has {df['Age'].isna().sum()} / {df.shape[0]} missing values -- going to replace with average age {mean_age}\")\n",
     "\n",
     "# replace with average\n",
-    "\n",
     "missing = df['Age'].isna()\n",
     "df.loc[missing, 'Age'] = mean_age"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 19,
    "id": "ea584a1f-ff7e-4c63-b9ab-e051dc2f8d58",
    "metadata": {},
    "outputs": [
@@ -329,43 +329,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 41,
    "id": "720849ad-cc8c-4ba1-9156-c7002ca63e24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# these columns need to be z-normalized\n",
+    "to_scale = ['SibSp', 'Parch', 'Fare', 'Age']\n",
+    "scaler = StandardScaler()\n",
+    "scaled_cols = scaler.fit(df[to_scale])\n",
+    "\n",
+    "# these columns are categorical, need to be one-hot encoded\n",
+    "onehot = ['cabin_types', 'Embarked', 'Pclass', 'Sex', 'Pclass']\n",
+    "onehot_encoder = OneHotEncoder(handle_unknown='ignore')\n",
+    "onehot_cols = onehot_encoder.fit(df[onehot])\n",
+    "\n",
+    "def vectorize_data(df, scaler, onehot_encoder):\n",
+    "    scaled_cols = scaler.transform(df[to_scale])\n",
+    "    \n",
+    "    onehot_cols = onehot_encoder.transform(df[onehot]).todense()\n",
+    "    n_onehot_cols = sum([len(cats) for cats in onehot_encoder.categories_])\n",
+    "\n",
+    "    # create empty matrix\n",
+    "    examples = df.shape[0]\n",
+    "    n_cols = n_onehot_cols + len(to_scale)\n",
+    "    X = np.zeros((examples, n_cols))\n",
+    "\n",
+    "    # fill out column-by-column\n",
+    "    i = 0\n",
+    "    X[: , i:i+len(to_scale)] = scaled_cols\n",
+    "    i += len(to_scale)\n",
+    "    X[: , i:i+n_onehot_cols] = onehot_cols\n",
+    "    print('X.shape:', X.shape)    \n",
+    "\n",
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e0053844-c59e-4c2b-befc-b48552bf05c7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X.shape: (891, 26)\n",
+      "X.shape: (891, 25)\n",
       "y.shape: (891,)\n"
      ]
     }
    ],
    "source": [
-    "# these columns need to be z-normalized\n",
-    "to_scale = ['SibSp', 'Parch', 'Fare', 'Age']\n",
-    "scaler = StandardScaler()\n",
-    "scaled_cols = scaler.fit_transform(df[to_scale])\n",
-    "# print(scaled_cols.shape)\n",
-    "\n",
-    "# these columns are categorical, need to be one-hot encoded\n",
-    "onehot = ['cabin_types', 'Embarked', 'Pclass', 'Sex', 'Pclass']\n",
-    "onehot_encoder = OneHotEncoder(handle_unknown='ignore')\n",
-    "onehot_cols = onehot_encoder.fit_transform(df[onehot]).todense()\n",
-    "n_onehot_cols = sum([len(cats) for cats in onehot_encoder.categories_])\n",
-    "# print(n_onehot_cols, onehot_cols.shape)\n",
-    "\n",
-    "# construct X and y matrices for the NN\n",
-    "examples = df.shape[0]\n",
-    "n_cols = n_onehot_cols + len(as_is) + len(to_scale)\n",
-    "X = np.zeros((examples, n_cols))\n",
-    "\n",
-    "i = 0\n",
-    "X[: , i:i+len(to_scale)] = scaled_cols\n",
-    "i += len(to_scale)\n",
-    "X[: , i:i+n_onehot_cols] = onehot_cols\n",
-    "print('X.shape:', X.shape)\n",
+    "X = vectorize_data(df, scaler, onehot_encoder)\n",
     "\n",
     "y_true = np.array(df['Survived'])\n",
     "print('y.shape:', y_true.shape)"
@@ -373,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 23,
    "id": "4539f50a-684a-4e70-aa17-e5bb48aeb7de",
    "metadata": {},
    "outputs": [
@@ -387,7 +403,7 @@
     }
    ],
    "source": [
-    "# split into train and validation split\n",
+    "# split training data into train and validation split\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y_true, test_size=0.2, random_state=417)\n",
     "\n",
     "print('train size:', X_train.shape[0])\n",
@@ -404,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 24,
    "id": "c81c14d0-e515-48ee-80d8-bd386da61ecb",
    "metadata": {},
    "outputs": [],
@@ -415,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 25,
    "id": "fde741ad-4c18-41c6-9df6-839d5ae6499b",
    "metadata": {},
    "outputs": [],
@@ -433,9 +449,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 26,
    "id": "40d25d5f-ba19-49eb-aaa0-4efc68623239",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -448,52 +466,52 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-17 20:18:04.363720: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2024-04-17 21:35:58.104157: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45/45 [==============================] - 0s 3ms/step - loss: 0.6518 - accuracy: 0.6461 - val_loss: 0.5980 - val_accuracy: 0.7207\n",
+      "45/45 [==============================] - 0s 3ms/step - loss: 0.6208 - accuracy: 0.7135 - val_loss: 0.5225 - val_accuracy: 0.8436\n",
       "Epoch 2/20\n",
-      "45/45 [==============================] - 0s 927us/step - loss: 0.5852 - accuracy: 0.7079 - val_loss: 0.5329 - val_accuracy: 0.7654\n",
+      "45/45 [==============================] - 0s 915us/step - loss: 0.5216 - accuracy: 0.7837 - val_loss: 0.4356 - val_accuracy: 0.8827\n",
       "Epoch 3/20\n",
-      "45/45 [==============================] - 0s 786us/step - loss: 0.5374 - accuracy: 0.7584 - val_loss: 0.4833 - val_accuracy: 0.8101\n",
+      "45/45 [==============================] - 0s 817us/step - loss: 0.4743 - accuracy: 0.7978 - val_loss: 0.3928 - val_accuracy: 0.8827\n",
       "Epoch 4/20\n",
-      "45/45 [==============================] - 0s 810us/step - loss: 0.5021 - accuracy: 0.7697 - val_loss: 0.4480 - val_accuracy: 0.8045\n",
+      "45/45 [==============================] - 0s 792us/step - loss: 0.4520 - accuracy: 0.8020 - val_loss: 0.3717 - val_accuracy: 0.8827\n",
       "Epoch 5/20\n",
-      "45/45 [==============================] - 0s 844us/step - loss: 0.4767 - accuracy: 0.7879 - val_loss: 0.4180 - val_accuracy: 0.8436\n",
+      "45/45 [==============================] - 0s 830us/step - loss: 0.4434 - accuracy: 0.8062 - val_loss: 0.3644 - val_accuracy: 0.8827\n",
       "Epoch 6/20\n",
-      "45/45 [==============================] - 0s 818us/step - loss: 0.4588 - accuracy: 0.7992 - val_loss: 0.3996 - val_accuracy: 0.8883\n",
+      "45/45 [==============================] - 0s 895us/step - loss: 0.4390 - accuracy: 0.8090 - val_loss: 0.3566 - val_accuracy: 0.8883\n",
       "Epoch 7/20\n",
-      "45/45 [==============================] - 0s 866us/step - loss: 0.4468 - accuracy: 0.8034 - val_loss: 0.3855 - val_accuracy: 0.8715\n",
+      "45/45 [==============================] - 0s 865us/step - loss: 0.4326 - accuracy: 0.8118 - val_loss: 0.3501 - val_accuracy: 0.8939\n",
       "Epoch 8/20\n",
-      "45/45 [==============================] - 0s 801us/step - loss: 0.4395 - accuracy: 0.8020 - val_loss: 0.3756 - val_accuracy: 0.8994\n",
+      "45/45 [==============================] - 0s 840us/step - loss: 0.4272 - accuracy: 0.8118 - val_loss: 0.3479 - val_accuracy: 0.8883\n",
       "Epoch 9/20\n",
-      "45/45 [==============================] - 0s 810us/step - loss: 0.4336 - accuracy: 0.8076 - val_loss: 0.3683 - val_accuracy: 0.8883\n",
+      "45/45 [==============================] - 0s 823us/step - loss: 0.4247 - accuracy: 0.8188 - val_loss: 0.3455 - val_accuracy: 0.8883\n",
       "Epoch 10/20\n",
-      "45/45 [==============================] - 0s 769us/step - loss: 0.4267 - accuracy: 0.8104 - val_loss: 0.3634 - val_accuracy: 0.8883\n",
+      "45/45 [==============================] - 0s 805us/step - loss: 0.4213 - accuracy: 0.8174 - val_loss: 0.3438 - val_accuracy: 0.8994\n",
       "Epoch 11/20\n",
-      "45/45 [==============================] - 0s 767us/step - loss: 0.4237 - accuracy: 0.8104 - val_loss: 0.3588 - val_accuracy: 0.8827\n",
+      "45/45 [==============================] - 0s 810us/step - loss: 0.4177 - accuracy: 0.8244 - val_loss: 0.3415 - val_accuracy: 0.8939\n",
       "Epoch 12/20\n",
-      "45/45 [==============================] - 0s 780us/step - loss: 0.4194 - accuracy: 0.8160 - val_loss: 0.3547 - val_accuracy: 0.8939\n",
+      "45/45 [==============================] - 0s 836us/step - loss: 0.4150 - accuracy: 0.8202 - val_loss: 0.3425 - val_accuracy: 0.8771\n",
       "Epoch 13/20\n",
-      "45/45 [==============================] - 0s 789us/step - loss: 0.4152 - accuracy: 0.8146 - val_loss: 0.3514 - val_accuracy: 0.8827\n",
+      "45/45 [==============================] - 0s 810us/step - loss: 0.4140 - accuracy: 0.8287 - val_loss: 0.3383 - val_accuracy: 0.8939\n",
       "Epoch 14/20\n",
-      "45/45 [==============================] - 0s 795us/step - loss: 0.4137 - accuracy: 0.8118 - val_loss: 0.3460 - val_accuracy: 0.8939\n",
+      "45/45 [==============================] - 0s 816us/step - loss: 0.4110 - accuracy: 0.8287 - val_loss: 0.3343 - val_accuracy: 0.9050\n",
       "Epoch 15/20\n",
-      "45/45 [==============================] - 0s 794us/step - loss: 0.4099 - accuracy: 0.8230 - val_loss: 0.3445 - val_accuracy: 0.8883\n",
+      "45/45 [==============================] - 0s 793us/step - loss: 0.4085 - accuracy: 0.8315 - val_loss: 0.3333 - val_accuracy: 0.8994\n",
       "Epoch 16/20\n",
-      "45/45 [==============================] - 0s 839us/step - loss: 0.4087 - accuracy: 0.8188 - val_loss: 0.3426 - val_accuracy: 0.8994\n",
+      "45/45 [==============================] - 0s 785us/step - loss: 0.4070 - accuracy: 0.8272 - val_loss: 0.3323 - val_accuracy: 0.8994\n",
       "Epoch 17/20\n",
-      "45/45 [==============================] - 0s 818us/step - loss: 0.4055 - accuracy: 0.8287 - val_loss: 0.3454 - val_accuracy: 0.8939\n",
+      "45/45 [==============================] - 0s 833us/step - loss: 0.4042 - accuracy: 0.8343 - val_loss: 0.3311 - val_accuracy: 0.9050\n",
       "Epoch 18/20\n",
-      "45/45 [==============================] - 0s 813us/step - loss: 0.4041 - accuracy: 0.8258 - val_loss: 0.3414 - val_accuracy: 0.8827\n",
+      "45/45 [==============================] - 0s 818us/step - loss: 0.4027 - accuracy: 0.8287 - val_loss: 0.3310 - val_accuracy: 0.9050\n",
       "Epoch 19/20\n",
-      "45/45 [==============================] - 0s 807us/step - loss: 0.4022 - accuracy: 0.8272 - val_loss: 0.3384 - val_accuracy: 0.8827\n",
+      "45/45 [==============================] - 0s 835us/step - loss: 0.4007 - accuracy: 0.8287 - val_loss: 0.3286 - val_accuracy: 0.8994\n",
       "Epoch 20/20\n",
-      "45/45 [==============================] - 0s 793us/step - loss: 0.4013 - accuracy: 0.8329 - val_loss: 0.3365 - val_accuracy: 0.8939\n"
+      "45/45 [==============================] - 0s 926us/step - loss: 0.4004 - accuracy: 0.8315 - val_loss: 0.3264 - val_accuracy: 0.8994\n"
      ]
     }
    ],
@@ -517,17 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
-   "id": "0ca6e4c0-8313-4d14-9adc-5a9573ed6c9a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import classification_report, accuracy_score, roc_auc_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 27,
    "id": "7fcd711e-2a6d-4253-b7f0-5e80d04bf42e",
    "metadata": {},
    "outputs": [
@@ -535,17 +543,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.894\n",
-      "AUC: 0.901\n",
+      "Accuracy: 0.899\n",
+      "AUC: 0.903\n",
       "\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.91      0.93      0.92       115\n",
-      "           1       0.87      0.83      0.85        64\n",
+      "           0       0.88      0.98      0.93       115\n",
+      "           1       0.96      0.75      0.84        64\n",
       "\n",
-      "    accuracy                           0.89       179\n",
-      "   macro avg       0.89      0.88      0.88       179\n",
-      "weighted avg       0.89      0.89      0.89       179\n",
+      "    accuracy                           0.90       179\n",
+      "   macro avg       0.92      0.87      0.88       179\n",
+      "weighted avg       0.91      0.90      0.90       179\n",
       "\n"
      ]
     }
@@ -561,9 +569,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f526cb2d-4a32-484a-b592-9af2c746ebf1",
+   "metadata": {},
+   "source": [
+    "### Might as well make a submission to Kaggle :)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "cbc3b0d9-bc3d-4574-8fe3-6c8f54cbdbbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X.shape: (418, 25)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_test = pd.read_csv('data/titanic_test.csv')\n",
+    "\n",
+    "# impute age in the test data (with mean from training)\n",
+    "missing_test = df_test['Age'].isna()\n",
+    "df_test.loc[missing, 'Age'] = mean_age\n",
+    "# add cabin types column\n",
+    "df_test['cabin_types'] = df_test['Cabin'].apply(map_cabin_type)\n",
+    "\n",
+    "# vectorize\n",
+    "X_test = vectorize_data(df_test, scaler, onehot_encoder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "2f124be0-5c07-4e4d-a951-c2e5ded5049d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14/14 [==============================] - 0s 485us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "submission_probs = model.predict(X_test)\n",
+    "submission_preds = np.array(submission_probs > THRESH, dtype=int).squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "4a43beae-5d7f-45c3-b1b9-3033ae1a18ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_submission = pd.DataFrame.from_dict({'PassengerId': df_test['PassengerId'], 'Survived': submission_preds})\n",
+    "df_submission.to_csv('submission.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9476f0e1-4157-408e-9b5d-19424292bce8",
+   "id": "7238c633-4c06-49f7-9c39-39704a80dcb1",
    "metadata": {},
    "outputs": [],
    "source": []
